fix: hubspot checkbox list margin and gaps

--- a/src/assets/styles/hsform.css
+++ b/src/assets/styles/hsform.css
@@ -174,12 +174,13 @@ strong {
 .inputs-list.multi-container {
   display: flex !important;
   flex-direction: column !important;
-  gap: 1rem !important;
+  gap: 0.25rem !important;
   margin-bottom: 1rem;
 }
 
 .hs-form-checkbox-display {
   display: flex !important;
   align-items: center !important;
-  gap: 0.25rem !important;
+  gap: 0.5rem !important;
+  line-height: 2rem;
 }
